@@ -84,6 +84,8 @@ _ldap_module_lock = LDAPLock(desc='Module wide')
 
 from functions import open,initialize,init,get_option,set_option,escape_str
 
+from ldapobject import NO_UNIQUE_ENTRY
+
 from ldap.dn import explode_dn,explode_rdn,str2dn,dn2str
 del str2dn
 del dn2str
