@@ -6,6 +6,8 @@ Changes since 2.4.16:
 Lib/
 * New convenience function ldap.dn.is_dn()
 * New convenience function ldap.escape_str()
+* New convenience methods LDAPObject.read_s() and
+  LDAPObject.find_unique_entry()
 
 Modules/
 
